[package]
name = "rovfs"
version = "0.1.0"
edition = "2021"

default-run = "ravfs-cli"

[lib]
name = "ravfs"

[[bin]]
name = "ravfs-cli"
required-features = ["default", "inventory", "clap"]

[[bin]]
name = "ravfs-fuse"
required-features = ["default", "fuse_mt"]

[dependencies]
futures-lite = {version = "1.12.0"}
crossbeam = {version = "0.8.2"}
miette = {version = "5.3.0"}

memmap2 = {version = "0.5.8"}

compact_str = {version = "0.7.0"}
erasable = {version = "1.2.1"}
smallvec = {version = "1.10.0", features = ["union", "const_generics", "const_new"]}
smallbox = {version = "0.8.1"}
uuid = {version = "1.2.1"}

clap = {version = "4.0.18", optional = true, features = ["derive", "env", "wrap_help", "string"]}
inventory = {version = "0.3.2", optional = true}
fuse_mt = {version = "0.6.0", optional = true}

[features]
default = ["inventory"]
